--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -13,7 +13,7 @@ node() {
         git branch: 'master', credentialsId: '', url: repoURL
     }
     stage('Cucumber Tests') {
-        withMaven(maven: 'maven352') {
+        withMaven(maven: 'maven-latest') {
             sh """
 			cd ${env.WORKSPACE_LOCAL}
 			mvn clean test -e
