--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -1,4 +1,5 @@
-node() {
+node() 
+{
 
     def repoURL = 'https://github.com/SerkanGitRepo/CucumberXRay.git'
 
@@ -8,6 +9,7 @@ node() {
         env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
         echo "Workspace set to:" + env.WORKSPACE_LOCAL
         echo "Build time:" + env.BUILD_TIME
+        echo mvn --verison
     }
     stage('Checkout Self') {
         git branch: 'master', credentialsId: '', url: repoURL
