--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -1,6 +1,6 @@
 node() 
 {
-
+    agent { docker { image 'maven:3.8.4-openjdk-11-slim' }
     def repoURL = 'https://github.com/SerkanGitRepo/CucumberXRay.git'
 
     stage("Prepare Workspace") {
@@ -9,7 +9,7 @@ node()
         env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
         echo "Workspace set to:" + env.WORKSPACE_LOCAL
         echo "Build time:" + env.BUILD_TIME
-        echo mvn --verison
+
     }
     stage('Checkout Self') {
         git branch: 'master', credentialsId: '', url: repoURL
