--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -1,6 +1,6 @@
 node() 
 {
-    agent { docker { image 'maven:3.8.4-openjdk-11-slim' }
+    agent { docker { image 'maven:3.8.4-openjdk-11-slim' }}
     def repoURL = 'https://github.com/SerkanGitRepo/CucumberXRay.git'
 
     stage("Prepare Workspace") {
