--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -11,11 +11,13 @@ pipeline{
 	stages{
 		
 		stage("Prepare Workspace") {
-	        cleanWs()
-	        env.WORKSPACE_LOCAL = sh(returnStdout: true, script: 'pwd').trim()
-	        env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
-	        echo "Workspace set to:" + env.WORKSPACE_LOCAL
-	        echo "Build time:" + env.BUILD_TIME
+			steps{
+			    cleanWs()
+		        env.WORKSPACE_LOCAL = sh(returnStdout: true, script: 'pwd').trim()
+		        env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
+		        echo "Workspace set to:" + env.WORKSPACE_LOCAL
+		        echo "Build time:" + env.BUILD_TIME
+			}	   
     	}
     	
     	stage('Checkout Self') {
