--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -13,8 +13,12 @@ pipeline{
 		stage("Prepare Workspace") {
 			steps{
 			    cleanWs()
-		        env.WORKSPACE_LOCAL = sh(returnStdout: true, script: 'pwd').trim()
-		        env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
+			    script{
+			        env.WORKSPACE_LOCAL = sh(returnStdout: true, script: 'pwd').trim()
+		        	env.BUILD_TIME = sh(returnStdout: true, script: 'date +%F-%T').trim()
+			    }
+
+		       
 		        echo "Workspace set to:" + env.WORKSPACE_LOCAL
 		        echo "Build time:" + env.BUILD_TIME
 			}	   
