--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline{
     		steps{
     		    withMaven(maven: 'maven363') {
 	            sh """
-				cd ${env.WORKSPACE_LOCAL}
+				cd ${env.WORKSPACE_LOCAL}/CucumberXRay
 				mvn clean test -e
 				"""
 		        }
