--- a/CucumberXRay/Jenkinsfile
+++ b/CucumberXRay/Jenkinsfile
@@ -71,6 +71,7 @@ pipeline{
 					"labels":''' + labels + ''',
 					"description":"''' + description + '''",
 					"summary": "Automated Regression Execution @ ''' + env.BUILD_TIME + ' ' + environment + ''' " ,
+					"duedate": "01/01/2023"
 					"issuetype": {
 					"id": "''' + testExecutionFieldId + '''"
 					},
